@@ -8,7 +8,10 @@ CHANGES
 - orm
   - Fixed regression introduced in 0.6.0 involving improper
     history accounting on mutable attributes.  [ticket:1782]
-    
+  
+  - session.merge() will not expire attributes on the returned
+    instance if that instance is "pending".  [ticket:1789]
+
 - sql
   - Fixed bug that prevented implicit RETURNING from functioning
     properly with composite primary key that contained zeroes.
